--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cactus:
-    git:
-      url: https://github.com/cactus-compute/cactus-flutter.git
+  cactus: ^1.0.2
   path_provider: ^2.0.0
   permission_handler: ^12.0.1
+  wakelock_plus: ^1.2.0
 
 dev_dependencies:
   flutter_test:
