ci: Disable Flutter analytics in CI
- Speeds up build time
- Avoids first-run analytics prompt
- Improves CI reliability

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           flutter-version: '3.38.3'
 
+      - name: Disable Flutter analytics
+        run: flutter config --no-analytics
+
       - name: Get dependencies
         run: flutter pub get
 
